# dm-Seq

./: .gitignore  README.md
.github/workflows/: build.yml  dm-seq.mk
lv2/: Cargo.toml
lv2/dm-Seq.lv2/: dm-Seq.ttl  manifest.ttl  modgui.ttl
lv2/dm-Seq.lv2/modgui/: icon-dm-seq.html  javascript.js  stylesheet-dm-seq.css
lv2/src/: delta.rs  event_queue.rs  lib.rs  map_current_step_to_reordered_step.rs  map_sequencer_data.rs  map_step_duration_to_division.rs  midi_notes.rs  phasor.rs  synced_phasor.rs  update_position.rs  utils.rs
scripts/: build-lv2-for-mod-desktop-mac.sh
